Add hero image with text and styles

--- a/index.html
+++ b/index.html
@@ -27,4 +27,13 @@
       </ul>
     </nav>
   </header>
+
+  <main>
+    <section class="hero-section">
+      <div class="hero">
+        <!-- <img class="hero__image" src="./assets/Images/hero-bio.jpg" alt="a bee on pink flowers"> -->
+        <h2 class="hero__text">The Bees Knees</h2>
+      </div>
+    </section>
+  </main>
 </html>
