Add gallery with styles

--- a/index.html
+++ b/index.html
@@ -50,5 +50,20 @@
         From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.
       </p>
     </section>
+
+    <section class="gallery">
+      <h2 class="gallery__title">Photo Gallery</h2>
+      <div class="gallery_images">
+        <img src="./assets/Images/Photo-gallery-1.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-2.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-3.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-4.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-5.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-6.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-7.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-8.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-9.jpg" alt="" class="gallery__image">
+      </div>
+    </section>
   </main>
 </html>
