Add footer with styles

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__logo">
+    <h1 class="header__logo logo">
       Bandsite
     </h1>
     <nav class="header__nav">
@@ -66,4 +66,61 @@
       </div>
     </section>
   </main>
+  
+  <footer class="footer">
+    <section class="socials">
+      <h2 class="socials__title">Get in Touch</h2>
+      <div class="socials__icons">
+        <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram icon to link to instagram.com" class="socials_icon">
+        <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook icon to link to facebook.com" class="socials__icon">
+        <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter icon to link to twitter.com" class="socials__icon">
+      </div>
+    </section>
+
+    <section class="details">
+      <div class="details__card">
+        <div class="details__name">
+          <p>Cam Adams</p>
+          <p>The Bees Knees Management</p>
+        </div>
+        <div class="details__info">
+          <p>503 Broadway Penthouse,</p>
+          <p>New York, NY 10012, USA</p>
+        </div>
+        <div class="details__email">
+          <p>info@thebeeskness.com</p>
+        </div>
+      </div>
+      <div class="details__card">
+        <div class="details__name">
+          <p>Pearl Gregg</p>
+          <p>Limitless Artist Group</p>
+        </div>
+        <div class="details__info">
+          <p>Booking Agent for</p>
+          <p>US/South America/Japan</p>
+        </div>
+        <div class="details__email">
+          <p>pearl.gregg@limitlessag.com</p>
+        </div>
+        <div class="details__card">
+          <div class="details__name">
+            <p>Carson Whyte</p>
+            <p>ARCH Entertainment</p>
+          </div>
+          <div class="details__info">
+            <p>Booking Agent for</p>
+            <p>UK/EU/AU</p>
+          </div>
+          <div class="details__email">
+            <p>cwhyte@archentertainment.com</p>
+          </div>
+      </div>
+    </section>
+
+    <section class="copyright">
+      <h1 class="copyright__logo logo">Bandsite</h1>
+      <p class="copyright__text">Copyright The Bees Knees &copy 2021 All Rights Reserved</p>
+    </section>
+  </footer>
 </html>
