--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
 </head>
 <body>
   <header class="header">
-    <h1 class="header__logo logo">
-      Bandsite
-    </h1>
+    <a href="./index.html">
+      <h1 class="header__logo logo">
+        Bandsite
+      </h1>
+    </a>
     <nav class="header__nav">
       <ul class="header__list">
-        <a href="" class="header__link header__link--active">
+        <a href="./index.html" class="header__link header__link--active">
           <li class="header__item">
             Biography
           </li>
         </a>
-        <a href="" class="header__link">
+        <a href="#" class="header__link">
           <li class="header__item">
             Shows
           </li>
@@ -59,32 +61,38 @@
     <section class="gallery">
       <h2 class="gallery__title">Photo Gallery</h2>
       <div class="gallery__images">
-        <img src="./assets/Images/Photo-gallery-1.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-2.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-3.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-4.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-5.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-6.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-7.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-8.jpg" alt="" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-9.jpg" alt="" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-1.jpg" alt="People dancing in a club" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-2.jpg" alt="A woman dancing" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-3.jpg" alt="Hands in the aire at a concert" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-4.jpg" alt="A woman on someone's shoudlers at a concert" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-5.jpg" alt="Hands in the air at a concert" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-6.jpg" alt="A man singing on stage" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-7.jpg" alt="Colourful lights at a concert" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-8.jpg" alt="Turntables with glowing colourful lights" class="gallery__image">
+        <img src="./assets/Images/Photo-gallery-9.jpg" alt="Confetti falling on the audience at a concert" class="gallery__image">
       </div>
     </section>
   </main>
   
   <footer class="footer">
-    <section class="socials">
+    <div class="socials">
       <h2 class="socials__title">
         Get in Touch
       </h2>
       <div class="socials__icons">
-        <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram icon to link to instagram.com" class="socials__icon">
-        <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook icon to link to facebook.com" class="socials__icon">
-        <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter icon to link to twitter.com" class="socials__icon">
+        <a href="https://www.facebook.com/" target="_blank">
+          <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook icon to link to facebook.com" class="socials__icon">
+        </a>
+        <a href="https://www.instagram.com/" target="_blank">
+          <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram icon to link to instagram.com" class="socials__icon">
+        </a>
+        <a href="https://twitter.com/?lang=en" target="_blank">
+          <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter icon to link to twitter.com" class="socials__icon">
+        </a>
       </div>
-    </section>
+    </div>
 
-    <section class="details">
+    <div class="details">
       <div class="details__card">
         <div class="details__name">
           <p>Cam Adams</p>
@@ -123,14 +131,17 @@
         <div class="details__email">
           <p>cwhyte@archentertainment.com</p>
         </div>
-    </section>
+      </div>
+    </div>
 
-    <section class="footer__logo">
-      <h1 class="logo">Bandsite</h1>
-    </section>
+    <div class="footer__logo">
+      <a href="./index.html">
+        <h2 class="logo">Bandsite</h2>
+      </a>
+    </div>
 
-    <section class="copyright">
-      <p class="copyright__text">Copyright The Bees Knees &copy 2021 All Rights Reserved</p>
-    </section>
+    <div class="copyright">
+      <p class="copyright__text">Copyright The Bees Knees &copy; 2021 All Rights Reserved</p>
+    </div>
   </footer>
 </html>
