--- a/index.html
+++ b/index.html
@@ -1,93 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./styles/bio.css" >
-  <title>BANDSITE</title>
-</head>
-<body>
-  <header class="header">
-    <a href="./index.html">
-      <h1 class="header__logo logo">
-        Bandsite
-      </h1>
-    </a>
-    <nav class="header__nav">
-      <ul class="header__list">
-        <a href="./index.html" class="header__link header__link--active">
-          <li class="header__item">
-            Biography
-          </li>
-        </a>
-        <a href="#" class="header__link">
-          <li class="header__item">
-            Shows
-          </li>
-        </a>
-      </ul>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/bio.css" />
+    <title>BANDSITE</title>
+  </head>
+  <body>
+    <header class="header">
+      <a href="./index.html">
+        <h1 class="header__logo logo">Bandsite</h1>
+      </a>
+      <nav class="header__nav">
+        <ul class="header__list">
+          <a href="./index.html" class="header__link header__link--active">
+            <li class="header__item">Biography</li>
+          </a>
+          <a href="./shows.html" class="header__link">
+            <li class="header__item">Shows</li>
+          </a>
+        </ul>
+      </nav>
+    </header>
 
-  <main>
-    <section class="hero-section">
-      <div class="hero">
-        <h2 class="hero__text">The Bees Knees</h2>
-      </div>
-    </section>
+    <main>
+      <section class="hero-section">
+        <div class="hero">
+          <h2 class="hero__text">The Bees Knees</h2>
+        </div>
+      </section>
 
-    <section class="about">
-      <h2 class="about__title">About the Musicians</h2>
-      <div class="about__content">
-        <img class="about__image" src="./assets/Images/band.jpg" alt="A band on a stage with blue spotlights">
-        <p class="about__quote">
-          “We push each other to be the best. It’s not uncommon for one of us to say ‘this needs to be better, back to the drawing board’” 
-        </p>
-        <p class="about__quote-author">- Bryan Teddy, lead vocalist of The Bees Knees</p>
-        <h3 class="about__band-name">The Bees Knees</h3>
-        <div class="about__info-container">
-          <p class="about__info about__info--left">
-            The Bees Knees is a pop rock band originating from San Francisco, California. The band consists of lead vocalist Bryan Teddy, guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent Zulkee and drummer Freddie Fischer. The band achieved its first commercial success as an unsigned act, drawing attention from manager Cam Adams. Having worked with other popular acts (The Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was confident the band could succeed even further, pushing them to sign with Magenta Records. 
+      <section class="about">
+        <h2 class="about__title">About the Musicians</h2>
+        <div class="about__content">
+          <img
+            class="about__image"
+            src="./assets/Images/band.jpg"
+            alt="A band on a stage with blue spotlights"
+          />
+          <p class="about__quote">
+            “We push each other to be the best. It’s not uncommon for one of us
+            to say ‘this needs to be better, back to the drawing board’”
           </p>
-          <p class="about__info about__info--right">
-            From there, the band has soared, gaining international recognition and ranking in the top 10 on the Poster Charts. New fans immediately fell in love with the band’s original and organic attitude, solidifying their place as one of the hottest and fastest up and coming acts of this century. Fans affectionately refer to themselves as “The Hive” and are drawn to their candid and authentic performances on stage. Looking forward to touring in the future, The Bees Knees are currently recording their second studio album, looking to be released in late 2021.
+          <p class="about__quote-author">
+            - Bryan Teddy, lead vocalist of The Bees Knees
           </p>
+          <h3 class="about__band-name">The Bees Knees</h3>
+          <div class="about__info-container">
+            <p class="about__info about__info--left">
+              The Bees Knees is a pop rock band originating from San Francisco,
+              California. The band consists of lead vocalist Bryan Teddy,
+              guitarist Mack Tolkens, guitarist Andrew Green, bassist Kent
+              Zulkee and drummer Freddie Fischer. The band achieved its first
+              commercial success as an unsigned act, drawing attention from
+              manager Cam Adams. Having worked with other popular acts (The
+              Elephant In The Room, One Trick Pony, The Cat’s Meow), Adams was
+              confident the band could succeed even further, pushing them to
+              sign with Magenta Records.
+            </p>
+            <p class="about__info about__info--right">
+              From there, the band has soared, gaining international recognition
+              and ranking in the top 10 on the Poster Charts. New fans
+              immediately fell in love with the band’s original and organic
+              attitude, solidifying their place as one of the hottest and
+              fastest up and coming acts of this century. Fans affectionately
+              refer to themselves as “The Hive” and are drawn to their candid
+              and authentic performances on stage. Looking forward to touring in
+              the future, The Bees Knees are currently recording their second
+              studio album, looking to be released in late 2021.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section class="gallery">
+        <h2 class="gallery__title">Photo Gallery</h2>
+        <div class="gallery__images">
+          <img
+            src="./assets/Images/Photo-gallery-1.jpg"
+            alt="People dancing in a club"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-2.jpg"
+            alt="A woman dancing"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-3.jpg"
+            alt="Hands in the aire at a concert"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-4.jpg"
+            alt="A woman on someone's shoudlers at a concert"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-5.jpg"
+            alt="Hands in the air at a concert"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-6.jpg"
+            alt="A man singing on stage"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-7.jpg"
+            alt="Colourful lights at a concert"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-8.jpg"
+            alt="Turntables with glowing colourful lights"
+            class="gallery__image"
+          />
+          <img
+            src="./assets/Images/Photo-gallery-9.jpg"
+            alt="Confetti falling on the audience at a concert"
+            class="gallery__image"
+          />
+        </div>
+      </section>
+
+      <section class="comments">
+        <h2 class="comments__title">Join the Conversation</h2>
+
+        <div class="form-container">
+          <div class="form-container__image-div">
+            <img
+              class="form-container__image"
+              src="./assets/Images/Mohan-muruge.jpg"
+              alt="Picture of Mohan Muruge"
+            />
+          </div>
+          <form class="form-container__form">
+            <label class="form-container__name label">
+              Name
+              <input
+                type="text"
+                name="name"
+                placeholder="Enter your name"
+                class="form-container__name-input"
+              />
+            </label>
+            <label class="form-container__comment label">
+              Comment
+              <textarea
+                name="comment"
+                placeholder="Add a new comment"
+                class="form-container__comment-input"
+              ></textarea>
+            </label>
+            <button class="form-container__button">Comment</button>
+          </form>
         </div>
 
-      </div>
-    </section>
+        <div class="comments-cards">
+          <div class="comment-card">
+            <div class="comment-card__image"></div>
+            <div class="comment-card__info">
+              <p class="comment-card__name">Connor Walton</p>
+              <p class="comment-card__date">02/17/2021</p>
+              <p class="comment-card__text">
+                This is art. This is inexplicable magic expressed in the purest
+                way, everything that makes up this majestic work deserves
+                reverence. Let us appreciate this for what it is and what it
+                contains.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 
-    <section class="gallery">
-      <h2 class="gallery__title">Photo Gallery</h2>
-      <div class="gallery__images">
-        <img src="./assets/Images/Photo-gallery-1.jpg" alt="People dancing in a club" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-2.jpg" alt="A woman dancing" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-3.jpg" alt="Hands in the aire at a concert" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-4.jpg" alt="A woman on someone's shoudlers at a concert" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-5.jpg" alt="Hands in the air at a concert" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-6.jpg" alt="A man singing on stage" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-7.jpg" alt="Colourful lights at a concert" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-8.jpg" alt="Turntables with glowing colourful lights" class="gallery__image">
-        <img src="./assets/Images/Photo-gallery-9.jpg" alt="Confetti falling on the audience at a concert" class="gallery__image">
-      </div>
-    </section>
-  </main>
-  
   <footer class="footer">
     <div class="socials">
-      <h2 class="socials__title">
-        Get in Touch
-      </h2>
+      <h2 class="socials__title">Get in Touch</h2>
       <div class="socials__icons">
         <a href="https://www.facebook.com/" target="_blank">
-          <img src="./assets/Icons/SVG/Icon-facebook.svg" alt="Facebook icon to link to facebook.com" class="socials__icon">
+          <img
+            src="./assets/Icons/SVG/Icon-facebook.svg"
+            alt="Facebook icon to link to facebook.com"
+            class="socials__icon"
+          />
         </a>
         <a href="https://www.instagram.com/" target="_blank">
-          <img src="./assets/Icons/SVG/Icon-instagram.svg" alt="Instagram icon to link to instagram.com" class="socials__icon">
+          <img
+            src="./assets/Icons/SVG/Icon-instagram.svg"
+            alt="Instagram icon to link to instagram.com"
+            class="socials__icon"
+          />
         </a>
         <a href="https://twitter.com/?lang=en" target="_blank">
-          <img src="./assets/Icons/SVG/Icon-twitter.svg" alt="Twitter icon to link to twitter.com" class="socials__icon">
+          <img
+            src="./assets/Icons/SVG/Icon-twitter.svg"
+            alt="Twitter icon to link to twitter.com"
+            class="socials__icon"
+          />
         </a>
       </div>
     </div>
@@ -141,7 +254,9 @@
     </div>
 
     <div class="copyright">
-      <p class="copyright__text">Copyright The Bees Knees &copy; 2021 All Rights Reserved</p>
+      <p class="copyright__text">
+        Copyright The Bees Knees &copy; 2021 All Rights Reserved
+      </p>
     </div>
   </footer>
 </html>
