Add functionality to load default comments upon page load

--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
           </form>
         </div>
 
-        <div class="comments-cards">
-          <div class="comment-card">
+        <div class="comment-cards">
+          <!-- <div class="comment-card">
             <div class="comment-card__image"></div>
             <div class="comment-card__info">
               <p class="comment-card__name">Connor Walton</p>
@@ -171,10 +171,12 @@
                 contains.
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </section>
     </main>
+
+    <script src="./script/index-page.js"></script>
   </body>
 
   <footer class="footer">
