--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <a href="./index.html" class="header__link header__link--active">
             <li class="header__item">Biography</li>
           </a>
-          <a href="./shows.html" class="header__link">
+          <a href="./pages/shows.html" class="header__link">
             <li class="header__item">Shows</li>
           </a>
         </ul>
