Display live comments to top of comment list

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -41,25 +41,21 @@
       <section class="shows">
         <h2 class="shows__title">Shows</h2>
         <div class="show-cards">
-          <div class="show-card">
-            <div class="show-card__titles">
-              <p class="show-card__label">Date</p>
-              <p class="show-card__label">Venu</p>
-              <p class="show-card__label">Location</p>
-            </div>
-            <!-- <h3 class="show-card__label label">Date</h3>
+          <div class="show-card__titles">
+            <p class="show-card__label">Date</p>
+            <p class="show-card__label">Venu</p>
+            <p class="show-card__label">Location</p>
+          </div>
+          <!-- <div class="show-card"> -->
+
+          <!-- <h3 class="show-card__label label">Date</h3>
             <p class="show-card__info">Mon Sept 06 2021</p>
             <h3 class="show-card__label">Venue</h3>
             <p class="show-card__info">Ronald Lane</p>
             <h3 class="show-card__label">Location</h3>
             <p class="show-card__info">San Francisco, CA</p>
             <button href="" class="show-card__button">Buy Tickets</button> -->
-          </div>
-          <div class="show-card"></div>
-          <div class="show-card"></div>
-          <div class="show-card"></div>
-          <div class="show-card"></div>
-          <div class="show-card"></div>
+          <!-- </div> -->
         </div>
       </section>
     </main>
