--- a/index.html
+++ b/index.html
@@ -126,50 +126,56 @@
       </section>
 
       <section class="comments">
-        <h2 class="comments__title">Join the Conversation</h2>
+        <div class="comments-wrapper">
+          <h2 class="comments-wrapper__title">Join the Conversation</h2>
 
-        <div class="form-container">
-          <div class="form-container__image-div">
-            <img
-              class="form-container__image"
-              src="./assets/Images/Mohan-muruge.jpg"
-              alt="Picture of Mohan Muruge"
-            />
-          </div>
-          <form class="form-container__form">
-            <label class="form-container__name label">
-              Name
-              <input
-                type="text"
-                name="name"
-                placeholder="Enter your name"
-                class="form-container__name-input"
+          <div class="form-container">
+            <div class="form-container__image-div">
+              <img
+                class="form-container__image"
+                src="./assets/Images/Mohan-muruge.jpg"
+                alt="Picture of Mohan Muruge"
               />
-            </label>
-            <label class="form-container__comment label">
-              Comment
-              <textarea
-                name="comment"
-                placeholder="Add a new comment"
-                class="form-container__comment-input"
-              ></textarea>
-            </label>
-            <button class="form-container__button">Comment</button>
-          </form>
-        </div>
+            </div>
+            <form class="form-container__form">
+              <label class="form-container__name label">
+                Name
+                <input
+                  type="text"
+                  name="name"
+                  placeholder="Enter your name"
+                  class="form-container__name-input"
+                />
+              </label>
+              <label class="form-container__comment label">
+                Comment
+                <textarea
+                  name="comment"
+                  placeholder="Add a new comment"
+                  class="form-container__comment-input"
+                ></textarea>
+              </label>
+              <button class="form-container__button">Comment</button>
+            </form>
+          </div>
 
-        <div class="comment-cards">
-          <!-- <div class="comment-card">
-            <div class="comment-card__image"></div>
-            <div class="comment-card__info">
-              <p class="comment-card__name">Connor Walton</p>
-              <p class="comment-card__date">02/17/2021</p>
-              <p class="comment-card__text">
-                This is art. This is inexplicable magic expressed in the purest
-                way, everything that makes up this majestic work deserves
-                reverence. Let us appreciate this for what it is and what it
-                contains.
-              </p>
+          <div class="comment-cards">
+            <!-- <div class="comment-card">
+              <div class="comment-card__image"></div>
+              <div class="comment-card__output">
+                <div class="comment-card__info">
+                  <p class="comment-card__name">Connor Walton</p>
+                  <p class="comment-card__date">02/17/2021</p>
+                </div>
+                <div class="comment-card__comment">
+                  <p class="comment-card__text">
+                    This is art. This is inexplicable magic expressed in the
+                    purest way, everything that makes up this majestic work
+                    deserves reverence. Let us appreciate this for what it is
+                    and what it contains.
+                  </p>
+                </div>
+              </div>
             </div>
           </div> -->
         </div>
