--- a/pages/shows.html
+++ b/pages/shows.html
@@ -41,23 +41,25 @@
       <section class="shows">
         <div class="shows-container">
           <h2 class="shows-container__title">Shows</h2>
-          <div class="tablet-labels">
-            <p class="tablet-labels__label label">Date</p>
-            <p class="tablet-labels__label label">Venu</p>
-            <p class="tablet-labels__label label">Location</p>
-          </div>
+          <div class="shows-container__inner">
+            <div class="tablet-labels">
+              <p class="tablet-labels__label label">Date</p>
+              <p class="tablet-labels__label label">Venu</p>
+              <p class="tablet-labels__label label">Location</p>
+            </div>
 
-          <div class="show-cards">
-            <!-- <div class="show-card"> -->
+            <div class="show-cards">
+              <!-- <div class="show-card"> -->
 
-            <!-- <h3 class="show-card__label label">Date</h3>
-            <p class="show-card__info">Mon Sept 06 2021</p>
-            <h3 class="show-card__label label">Venue</h3>
-            <p class="show-card__info">Ronald Lane</p>
-            <h3 class="show-card__label label">Location</h3>
-            <p class="show-card__info">San Francisco, CA</p>
-            <button href="" class="show-card__button">Buy Tickets</button> -->
-            <!-- </div> -->
+              <!-- <h3 class="show-card__label label">Date</h3>
+              <p class="show-card__info">Mon Sept 06 2021</p>
+              <h3 class="show-card__label label">Venue</h3>
+              <p class="show-card__info">Ronald Lane</p>
+              <h3 class="show-card__label label">Location</h3>
+              <p class="show-card__info">San Francisco, CA</p>
+              <button href="" class="show-card__button">Buy Tickets</button> -->
+              <!-- </div> -->
+            </div>
           </div>
         </div>
       </section>
