Final push sprint-2-testing

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -48,18 +48,7 @@
               <p class="tablet-labels__label label">Location</p>
             </div>
 
-            <div class="show-cards">
-              <!-- <div class="show-card"> -->
-
-              <!-- <h3 class="show-card__label label">Date</h3>
-              <p class="show-card__info">Mon Sept 06 2021</p>
-              <h3 class="show-card__label label">Venue</h3>
-              <p class="show-card__info">Ronald Lane</p>
-              <h3 class="show-card__label label">Location</h3>
-              <p class="show-card__info">San Francisco, CA</p>
-              <button href="" class="show-card__button">Buy Tickets</button> -->
-              <!-- </div> -->
-            </div>
+            <div class="show-cards"></div>
           </div>
         </div>
       </section>
