--- a/index.html
+++ b/index.html
@@ -159,26 +159,7 @@
             </form>
           </div>
 
-          <div class="comment-cards">
-            <!-- <div class="comment-card">
-              <div class="comment-card__image"></div>
-              <div class="comment-card__output">
-                <div class="comment-card__info">
-                  <p class="comment-card__name">Connor Walton</p>
-                  <p class="comment-card__date">02/17/2021</p>
-                </div>
-                <div class="comment-card__comment">
-                  <p class="comment-card__text">
-                    This is art. This is inexplicable magic expressed in the
-                    purest way, everything that makes up this majestic work
-                    deserves reverence. Let us appreciate this for what it is
-                    and what it contains.
-                  </p>
-                </div>
-              </div>
-            </div>
-          </div> -->
-        </div>
+          <div class="comment-cards"></div>
       </section>
     </main>
 
