Pull comments info from API and display it on the page, including new comments

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header class="header">
       <a href="./index.html">
-        <h1 class="header__logo logo">Bandsite</h1>
+        <img class="header__logo logo" src="./assets/Logo/Logo-bandsite.svg">
       </a>
       <nav class="header__nav">
         <ul class="header__list">
@@ -28,7 +28,10 @@
     <main>
       <section class="hero-section">
         <div class="hero">
-          <h2 class="hero__text">The Bees Knees</h2>
+          <div class="hero--overlay">
+            <h2 class="hero__text">The Bees Knees</h2>
+          </div>
+     
         </div>
       </section>
 
@@ -239,7 +242,7 @@
 
     <div class="footer__logo">
       <a href="./index.html">
-        <h2 class="logo">Bandsite</h2>
+        <img class="logo" src="./assets/Logo/Logo-bandsite.svg">
       </a>
     </div>
 
