--- a/pages/shows.html
+++ b/pages/shows.html
@@ -10,14 +10,14 @@
   <body>
     <header class="header">
       <a href="../index.html">
-        <h1 class="header__logo logo">Bandsite</h1>
+        <img class="header__logo logo" src="../assets/Logo/Logo-bandsite.svg" />
       </a>
       <nav class="header__nav">
         <ul class="header__list">
           <a href="../index.html" class="header__link">
             <li class="header__item">Biography</li>
           </a>
-          <a href="#" class="header__link header__link--active">
+          <a class="header__link header__link--active">
             <li class="header__item">Shows</li>
           </a>
         </ul>
@@ -26,15 +26,17 @@
 
     <main>
       <section class="hero-section">
-        <div class="hero">
-          <div class="hero__text-section">
-            <h1 class="hero__album">Beautiful Beasts Album</h1>
-            <h1 class="hero__text">Queen of Yellow x For The Stings</h1>
+        <div class="hero-section--overlay">
+          <div class="hero">
+            <div class="hero__text-section">
+              <h1 class="hero__album">Beautiful Beasts Album</h1>
+              <h1 class="hero__text">Queen of Yellow x For The Stings</h1>
+            </div>
+            <iframe
+              class="hero__song"
+              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1262470759&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+            ></iframe>
           </div>
-          <iframe
-            class="hero__song"
-            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1262470759&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-          ></iframe>
         </div>
       </section>
 
@@ -128,7 +130,7 @@
 
     <div class="footer__logo">
       <a href="./index.html">
-        <h2 class="logo">Bandsite</h2>
+        <img class="logo" src="../assets/Logo/Logo-bandsite.svg" />
       </a>
     </div>
 
