Update all shows content to update dynamically

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/shows.css" />
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>BANDSITE</title>
   </head>
   <body>
@@ -40,7 +41,7 @@
         </div>
       </section>
 
-      <section class="shows">
+      <!-- <section class="shows">
         <div class="shows-container">
           <h2 class="shows-container__title">Shows</h2>
           <div class="shows-container__inner">
@@ -53,7 +54,7 @@
             <div class="show-cards"></div>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
     <script src="../script/build-shows-page.js"></script>
   </body>
