--- a/pages/shows.html
+++ b/pages/shows.html
@@ -10,19 +10,25 @@
   </head>
   <body>
     <header class="header">
-      <a href="../index.html">
-        <img class="header__logo logo" src="../assets/Logo/Logo-bandsite.svg" />
-      </a>
-      <nav class="header__nav">
-        <ul class="header__list">
-          <a href="../index.html" class="header__link">
-            <li class="header__item">Biography</li>
-          </a>
-          <a class="header__link header__link--active">
-            <li class="header__item">Shows</li>
-          </a>
-        </ul>
-      </nav>
+      <div class="header-wrapper">
+        <a href="../index.html">
+          <img
+            class="header-wrapper__logo logo"
+            src="../assets/Logo/Logo-bandsite.svg"
+          />
+        </a>
+        <nav class="header-wrapper__nav">
+          <ul class="header-wrapper__list">
+            <li class="header-wrapper__item">
+              <a href="../index.html" class="header-wrapper__link">Biography</a>
+            </li>
+
+            <li class="header-wrapper__item header-wrapper__item--active">
+              <a href="./shows.html" class="header-wrapper__link">Shows</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
     </header>
 
     <main>
@@ -40,105 +46,92 @@
           </div>
         </div>
       </section>
-
-      <!-- <section class="shows">
-        <div class="shows-container">
-          <h2 class="shows-container__title">Shows</h2>
-          <div class="shows-container__inner">
-            <div class="tablet-labels">
-              <p class="tablet-labels__label label">Date</p>
-              <p class="tablet-labels__label label">Venu</p>
-              <p class="tablet-labels__label label">Location</p>
-            </div>
-
-            <div class="show-cards"></div>
-          </div>
-        </div>
-      </section> -->
     </main>
     <script src="../script/build-shows-page.js"></script>
   </body>
 
   <footer class="footer">
-    <div class="socials">
-      <h2 class="socials__title">Get in Touch</h2>
-      <div class="socials__icons">
-        <a href="https://www.facebook.com/" target="_blank">
-          <img
-            src="../assets/Icons/SVG/Icon-facebook.svg"
-            alt="Facebook icon to link to facebook.com"
-            class="socials__icon"
-          />
-        </a>
-        <a href="https://www.instagram.com/" target="_blank">
-          <img
-            src="../assets/Icons/SVG/Icon-instagram.svg"
-            alt="Instagram icon to link to instagram.com"
-            class="socials__icon"
-          />
-        </a>
-        <a href="https://twitter.com/?lang=en" target="_blank">
-          <img
-            src="../assets/Icons/SVG/Icon-twitter.svg"
-            alt="Twitter icon to link to twitter.com"
-            class="socials__icon"
-          />
-        </a>
+    <div class="footer-wrapper">
+      <div class="socials">
+        <h2 class="socials__title">Get in Touch</h2>
+        <div class="socials__icons">
+          <a href="https://www.instagram.com/" target="_blank">
+            <img
+              src="../assets/Icons/SVG/Icon-instagram.svg"
+              alt="Instagram icon to link to instagram.com"
+              class="socials__icon"
+            />
+          </a>
+          <a href="https://www.facebook.com/" target="_blank">
+            <img
+              src="../assets/Icons/SVG/Icon-facebook.svg"
+              alt="Facebook icon to link to facebook.com"
+              class="socials__icon"
+            />
+          </a>
+          <a href="https://twitter.com/?lang=en" target="_blank">
+            <img
+              src="../assets/Icons/SVG/Icon-twitter.svg"
+              alt="Twitter icon to link to twitter.com"
+              class="socials__icon"
+            />
+          </a>
+        </div>
       </div>
-    </div>
 
-    <div class="details">
-      <div class="details__card">
-        <div class="details__name">
-          <p>Cam Adams</p>
-          <p>The Bees Knees Management</p>
+      <div class="details">
+        <div class="details__card">
+          <div class="details__name">
+            <p>Cam Adams</p>
+            <p>The Bees Knees Management</p>
+          </div>
+          <div class="details__info">
+            <p>503 Broadway Penthouse,</p>
+            <p>New York, NY 10012, USA</p>
+          </div>
+          <div class="details__email">
+            <p>info@thebeeskness.com</p>
+          </div>
         </div>
-        <div class="details__info">
-          <p>503 Broadway Penthouse,</p>
-          <p>New York, NY 10012, USA</p>
+        <div class="details__card">
+          <div class="details__name">
+            <p>Pearl Gregg</p>
+            <p>Limitless Artist Group</p>
+          </div>
+          <div class="details__info">
+            <p>Booking Agent for</p>
+            <p>US/South America/Japan</p>
+          </div>
+          <div class="details__email">
+            <p>pearl.gregg@limitlessag.com</p>
+          </div>
         </div>
-        <div class="details__email">
-          <p>info@thebeeskness.com</p>
+        <div class="details__card">
+          <div class="details__name">
+            <p>Carson Whyte</p>
+            <p>ARCH Entertainment</p>
+          </div>
+          <div class="details__info">
+            <p>Booking Agent for</p>
+            <p>UK/EU/AU</p>
+          </div>
+          <div class="details__email">
+            <p>cwhyte@archentertainment.com</p>
+          </div>
         </div>
       </div>
-      <div class="details__card">
-        <div class="details__name">
-          <p>Pearl Gregg</p>
-          <p>Limitless Artist Group</p>
-        </div>
-        <div class="details__info">
-          <p>Booking Agent for</p>
-          <p>US/South America/Japan</p>
-        </div>
-        <div class="details__email">
-          <p>pearl.gregg@limitlessag.com</p>
-        </div>
-      </div>
-      <div class="details__card">
-        <div class="details__name">
-          <p>Carson Whyte</p>
-          <p>ARCH Entertainment</p>
-        </div>
-        <div class="details__info">
-          <p>Booking Agent for</p>
-          <p>UK/EU/AU</p>
-        </div>
-        <div class="details__email">
-          <p>cwhyte@archentertainment.com</p>
-        </div>
-      </div>
-    </div>
 
-    <div class="footer__logo">
-      <a href="./index.html">
-        <img class="logo" src="../assets/Logo/Logo-bandsite.svg" />
-      </a>
-    </div>
+      <div class="footer-wrapper__logo">
+        <a href="./index.html">
+          <img class="logo" src="../assets/Logo/Logo-bandsite.svg" />
+        </a>
+      </div>
 
-    <div class="copyright">
-      <p class="copyright__text">
-        Copyright The Bees Knees &copy; 2021 All Rights Reserved
-      </p>
+      <div class="copyright">
+        <p class="copyright__text">
+          Copyright The Bees Knees &copy; 2021 All Rights Reserved
+        </p>
+      </div>
     </div>
   </footer>
 </html>
