--- a/index.html
+++ b/index.html
@@ -158,24 +158,28 @@
               />
             </div>
             <form class="form-container__form">
-              <label class="form-container__name label">
+              <label class="form-container__name label" for="name">
                 Name
                 <input
                   type="text"
                   name="name"
                   placeholder="Enter your name"
                   class="form-container__name-input"
+                  id="name"
                 />
               </label>
-              <label class="form-container__comment label">
+              <label class="form-container__comment label" for="comment">
                 Comment
                 <textarea
                   name="comment"
                   placeholder="Add a new comment"
                   class="form-container__comment-input"
+                  id="comment"
                 ></textarea>
               </label>
-              <button class="form-container__button">Comment</button>
+              <button class="form-container__button" value="submit">
+                Comment
+              </button>
             </form>
           </div>
 
