Final commit sprint-3

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>BANDSITE</title>
   </head>
+
   <body>
+    <!-- nav bar -->
     <header class="header">
       <div class="header-wrapper">
         <a href="./index.html">
@@ -34,18 +36,16 @@
     </header>
 
     <main>
+      <!-- hero section -->
       <section class="hero-section">
         <div class="hero-section--overlay">
           <div class="hero">
-            <!-- <div class="hero--overlay"> -->
-            <!-- <div class="hero__text-section"> -->
             <h2 class="hero__text">The Bees Knees</h2>
-            <!-- </div> -->
-            <!-- </div> -->
           </div>
         </div>
       </section>
 
+      <!-- about section -->
       <section class="about">
         <div class="about-wrapper">
           <h2 class="about__title">About the Musicians</h2>
@@ -92,6 +92,7 @@
         </div>
       </section>
 
+      <!-- gallery section -->
       <section class="gallery">
         <div class="gallery-wrapper">
           <h2 class="gallery-wrapper__title">Photo Gallery</h2>
@@ -145,6 +146,7 @@
         </div>
       </section>
 
+      <!-- comments section -->
       <section class="comments">
         <div class="comments-wrapper">
           <h2 class="comments-wrapper__title">Join the Conversation</h2>
@@ -157,6 +159,8 @@
                 alt="Picture of Mohan Muruge"
               />
             </div>
+
+            <!-- comment form -->
             <form class="form-container__form">
               <label class="form-container__name label" for="name">
                 Name
@@ -183,6 +187,7 @@
             </form>
           </div>
 
+          <!-- comments display -->
           <div class="comment-cards"></div>
         </div>
       </section>
@@ -191,6 +196,7 @@
     <script src="./script/index-page.js"></script>
   </body>
 
+  <!-- footer -->
   <footer class="footer">
     <div class="footer-wrapper">
       <div class="socials">
