--- a/pages/shows.html
+++ b/pages/shows.html
@@ -8,7 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>BANDSITE</title>
   </head>
+
   <body>
+    <!-- nav bar -->
     <header class="header">
       <div class="header-wrapper">
         <a href="../index.html">
@@ -32,6 +34,7 @@
     </header>
 
     <main>
+      <!-- hero section -->
       <section class="hero-section">
         <div class="hero-section--overlay">
           <div class="hero">
@@ -50,6 +53,7 @@
     <script src="../script/build-shows-page.js"></script>
   </body>
 
+  <!-- footer -->
   <footer class="footer">
     <div class="footer-wrapper">
       <div class="socials">
